--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,11 @@ requests==2.28.1
 webdriver_manager==3.8.4
 packaging==21.3
 flask-restful==0.3.9
-gunicorn==20.1.0
 uvicorn
 fastapi
+click==7.1.2
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
